command add source and modify triggerFrom[update]  task add source and modify triggerFrom[update]  version 2.13.8
