# docs/swagger.json
@@ -13,7 +13,7 @@
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "2.13.7"
+        "version": "2.13.8"
     },
     "host": "127.0.0.1:5487",
     "paths": {
@@ -1542,6 +1542,9 @@
                         "type": "string"
                     }
                 },
+                "source": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "integer"
                 },
@@ -2304,6 +2307,9 @@
                 "message": {
                     "type": "string"
                 },
+                "source": {
+                    "type": "string"
+                },
                 "stage_number": {
                     "type": "integer"
                 },
@@ -2367,6 +2373,9 @@
                     "type": "integer"
                 },
                 "message": {
+                    "type": "string"
+                },
+                "source": {
                     "type": "string"
                 },
                 "stage_number": {
